salesforce-connect/main/default/objects/Movie__x/Movie__x.object-meta.xml
<CustomObject>
    <description>From &#39;The Movie Database&#39;.</description>
    <externalDataSource>TheMovieDatabase</externalDataSource>
    <externalName>Movie</externalName>
    <label>Movie</label>
    <pluralLabel>Movies</pluralLabel>
</CustomObject>