salesforce-connect/main/default/objects/Movie__x/fields/Adult__c.field-meta.xml
<CustomField>
    <fullName>Adult__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Movie for adults.</description>
    <externalDeveloperName>Adult</externalDeveloperName>
    <label>Adult</label>
    <type>Checkbox</type>
</CustomField>