salesforce-connect/main/default/objects/Movie__x/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Movie language.</description>
    <externalDeveloperName>Language</externalDeveloperName>
    <label>Language</label>
    <length>5</length>
    <type>Text</type>
</CustomField>