salesforce-connect/main/default/objects/Movie__x/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <description>Synopsis.</description>
    <externalDeveloperName>Overview</externalDeveloperName>
    <label>Overview</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>