salesforce-connect/main/default/objects/Movie__x/fields/Popularity__c.field-meta.xml
<CustomField>
    <fullName>Popularity__c</fullName>
    <description>Movie popularity.</description>
    <externalDeveloperName>Popularity</externalDeveloperName>
    <label>Popularity</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>