salesforce-connect/main/default/objects/Movie__x/fields/Poster__c.field-meta.xml
<CustomField>
    <fullName>Poster__c</fullName>
    <description>Poster&#39;s URL path.</description>
    <externalDeveloperName>Poster</externalDeveloperName>
    <label>Poster</label>
    <type>Url</type>
</CustomField>