salesforce-connect/main/default/objects/Movie__x/fields/ReleaseDate__c.field-meta.xml
<CustomField>
    <fullName>ReleaseDate__c</fullName>
    <description>Release date.</description>
    <externalDeveloperName>ReleaseDate</externalDeveloperName>
    <label>Release Date</label>
    <type>DateTime</type>
</CustomField>