salesforce-connect/main/default/objects/Movie__x/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Movie title.</description>
    <externalDeveloperName>Title</externalDeveloperName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>