salesforce-connect/main/default/objects/Movie__x/fields/Vote__c.field-meta.xml
<CustomField>
    <fullName>Vote__c</fullName>
    <description>Movie rating.</description>
    <externalDeveloperName>Vote</externalDeveloperName>
    <label>Vote</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>