salesforce-connect/main/default/objects/Movie__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Title__c</columns>
    <columns>Overview__c</columns>
    <columns>Popularity__c</columns>
    <columns>Vote__c</columns>
    <columns>ReleaseDate__c</columns>
    <columns>Language__c</columns>
    <columns>Adult__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>